force-app/main/default/objects/Knowledge_Article__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>Access_HR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access HR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Answer_Link__c</fullName>
        <description>Used by Monash Connect, as a work around in missing lightning functionality of attaching article link in email.</description>
        <formula>IF( RecordType.Name == &apos;FAQ&apos;, HYPERLINK(&quot;https://www.monash.edu/students/support/connect/contact-us?_hs-q=&quot;+UrlName, Title),
            HYPERLINK(IF(CONTAINS(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)), &quot;unicrm&quot;), &quot;https://connect.monash.edu/&quot;,
            IF(CONTAINS(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260)), &quot;staging&quot;), &quot;https://staging-monashpartner.cs58.force.com/askmonash&quot;,
            &quot;https://sit-monashpartner.cs74.force.com/askmonash/&quot;))+&quot;s/article/&quot;+UrlName, Title)

            )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Answer Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Public facing only</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Answer_knowledge__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Approval_Group__c</fullName>
        <description>Field to select the Approvers group</description>
        <label>Approval Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Current Students</fullName>
                </value>
                <value>
                    <fullName>Course Advice</fullName>
                </value>
                <value>
                    <fullName>Future Students</fullName>
                </value>
                <value>
                    <fullName>Retention</fullName>
                </value>
                <value>
                    <fullName>Service Excellence</fullName>
                </value>
                <value>
                    <fullName>Knowledge Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Process_Step__c</fullName>
        <label>Approval Process Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Step 1</fullName>
                </value>
                <value>
                    <fullName>Step 2</fullName>
                </value>
                <value>
                    <fullName>Step 3</fullName>
                </value>
                <value>
                    <fullName>Step 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Article_Link__c</fullName>
        <description>Used in Knowledge Approval Process</description>
        <formula>LEFT($Api.Enterprise_Server_URL_510, FIND(&apos;/services&apos;,$Api.Enterprise_Server_URL_510)) + &apos;lightning/r/Knowledge__kav/&apos; + Id + &quot;/view&quot;</formula>
        <label>Article Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>Australia_Staff__c</fullName>
        <description>Please enter information useful for Australia Staff</description>
        <label>Australian Staff</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Australia_Student__c</fullName>
        <label>Australian Students, Staff &amp; Public</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Author_Email__c</fullName>
        <description>Content Author Email</description>
        <label>Author Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Author_Name__c</fullName>
        <label>Author Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorised_by__c</fullName>
        <label>Authorised by</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Automatically_Publish_On_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Automatically Publish On Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <description>Business Unit that owns the content</description>
        <label>Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disability and Support Services</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Human Resources</fullName>
                </value>
                <value>
                    <fullName>IT and Computers</fullName>
                </value>
                <value>
                    <fullName>Library</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Parking and Campus Services</fullName>
                </value>
                <value>
                    <fullName>Student Administration</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Course Information</fullName>
                </value>
                <value>
                    <fullName>Standard Text</fullName>
                </value>
                <value>
                    <fullName>Monash Adviser</fullName>
                </value>
                <value>
                    <fullName>Monash Research Office</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Revenue</fullName>
                </value>
                <value>
                    <fullName>Monash Graduate Research Office</fullName>
                </value>
                <value>
                    <fullName>Office of Research Ethics and Integrity</fullName>
                </value>
                <value>
                    <fullName>Research Infrastructure</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_One__c</fullName>
        <description>Category One is the broad area of the article</description>
        <label>Category One</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Business_Unit__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Academic</fullName>
                </value>
                <value>
                    <fullName>Accommodation</fullName>
                </value>
                <value>
                    <fullName>Accounts and passwords</fullName>
                </value>
                <value>
                    <fullName>Admissions</fullName>
                </value>
                <value>
                    <fullName>Campus services &amp; environment</fullName>
                </value>
                <value>
                    <fullName>Compliance and Complaints</fullName>
                </value>
                <value>
                    <fullName>Computer and online training</fullName>
                </value>
                <value>
                    <fullName>Computers and labs</fullName>
                </value>
                <value>
                    <fullName>Conduct and Compliance</fullName>
                </value>
                <value>
                    <fullName>Course enquiry</fullName>
                </value>
                <value>
                    <fullName>Disability services</fullName>
                </value>
                <value>
                    <fullName>Diversity and Inclusion</fullName>
                </value>
                <value>
                    <fullName>Email and support</fullName>
                </value>
                <value>
                    <fullName>Enrol and re-enrol</fullName>
                </value>
                <value>
                    <fullName>Equity</fullName>
                </value>
                <value>
                    <fullName>External (Enterprise and Monash Innovation)</fullName>
                </value>
                <value>
                    <fullName>External (Indigenous Research)</fullName>
                </value>
                <value>
                    <fullName>External (OGC)</fullName>
                </value>
                <value>
                    <fullName>External (Research and Revenue)</fullName>
                </value>
                <value>
                    <fullName>External (Research Ethics)</fullName>
                </value>
                <value>
                    <fullName>External (Research Infrastructure)</fullName>
                </value>
                <value>
                    <fullName>Extreme circumstances – WI Grade</fullName>
                </value>
                <value>
                    <fullName>Feedback</fullName>
                </value>
                <value>
                    <fullName>Fees</fullName>
                </value>
                <value>
                    <fullName>Final Assessments General</fullName>
                </value>
                <value>
                    <fullName>Final assessment timetable</fullName>
                </value>
                <value>
                    <fullName>Gender/LGBTIQA+</fullName>
                </value>
                <value>
                    <fullName>General/Shared</fullName>
                </value>
                <value>
                    <fullName>General Information</fullName>
                </value>
                <value>
                    <fullName>Government Funding</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Category_Two__c</fullName>
        <label>Category Two</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Category_One__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Academic dress</fullName>
                </value>
                <value>
                    <fullName>Academic Integrity</fullName>
                </value>
                <value>
                    <fullName>Academic misconduct</fullName>
                </value>
                <value>
                    <fullName>Academic progress</fullName>
                </value>
                <value>
                    <fullName>Academic Promotion</fullName>
                </value>
                <value>
                    <fullName>Academic record</fullName>
                </value>
                <value>
                    <fullName>Accepting funding</fullName>
                </value>
                <value>
                    <fullName>Access and location</fullName>
                </value>
                <value>
                    <fullName>Accommodation</fullName>
                </value>
                <value>
                    <fullName>Account closure</fullName>
                </value>
                <value>
                    <fullName>Account management</fullName>
                </value>
                <value>
                    <fullName>Accounts</fullName>
                </value>
                <value>
                    <fullName>Admissions and Applications</fullName>
                </value>
                <value>
                    <fullName>AHEGS</fullName>
                </value>
                <value>
                    <fullName>Allocate+</fullName>
                </value>
                <value>
                    <fullName>Allocate+ Tech Issue</fullName>
                </value>
                <value>
                    <fullName>Alternate exit</fullName>
                </value>
                <value>
                    <fullName>Alternative Assessment Arrangements</fullName>
                </value>
                <value>
                    <fullName>Animal Ethics</fullName>
                </value>
                <value>
                    <fullName>Annual Leave</fullName>
                </value>
                <value>
                    <fullName>Applications</fullName>
                </value>
                <value>
                    <fullName>Application system issues</fullName>
                </value>
                <value>
                    <fullName>Australia Awards</fullName>
                </value>
                <value>
                    <fullName>Bike parking</fullName>
                </value>
                <value>
                    <fullName>Biosecurity</fullName>
                </value>
                <value>
                    <fullName>Borrowing entitlements</fullName>
                </value>
                <value>
                    <fullName>Branches</fullName>
                </value>
                <value>
                    <fullName>Building access</fullName>
                </value>
                <value>
                    <fullName>Business development</fullName>
                </value>
                <value>
                    <fullName>Campus facilities &amp; services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirm_URL_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Confirm URL Change</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Content_Author_Notes__c</fullName>
        <description>Use to describe the changes made to the FAQ</description>
        <inlineHelpText>Enter the date, initial and surname, description of changes if any i.e. 12/1/16 cklopfer - updated in preparation for Get Started go live</inlineHelpText>
        <label>Content Author Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Content__c</fullName>
        <description>This field is used to store the actual content for community display. As we cannot hide the field name, I&apos;m calling it &quot;V&quot; so to kind of masquerade the field name</description>
        <label>Content</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Course_Code__c</fullName>
        <description>Course code is a 4-6 digit code that identifies the individual course.</description>
        <inlineHelpText>Please enter the 4-6 digit code that identifies the individual course.</inlineHelpText>
        <label>Course Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Information__c</fullName>
        <label>Course Information</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Department_School__c</fullName>
        <label>Department/School</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Faculty_Business_Unit__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Academic Services</fullName>
                </value>
                <value>
                    <fullName>Arts</fullName>
                </value>
                <value>
                    <fullName>Arts Music Auditioning Scheduling</fullName>
                </value>
                <value>
                    <fullName>Arts Spec Con</fullName>
                </value>
                <value>
                    <fullName>Campus Services &amp; environment</fullName>
                </value>
                <value>
                    <fullName>Chemical Engg.</fullName>
                </value>
                <value>
                    <fullName>Civil Engg.</fullName>
                </value>
                <value>
                    <fullName>Document Delivery</fullName>
                </value>
                <value>
                    <fullName>E&amp;CS Engg.</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Education Professional Experience</fullName>
                </value>
                <value>
                    <fullName>Enrolments</fullName>
                </value>
                <value>
                    <fullName>Gippsland Responses</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>iUSEpass</fullName>
                </value>
                <value>
                    <fullName>Law PG</fullName>
                </value>
                <value>
                    <fullName>Law UG</fullName>
                </value>
                <value>
                    <fullName>Material Science Engg.</fullName>
                </value>
                <value>
                    <fullName>Mech &amp; Aero Engg.</fullName>
                </value>
                <value>
                    <fullName>MPP - Custom Programs &amp; Partnerships</fullName>
                </value>
                <value>
                    <fullName>MPP - Internships</fullName>
                </value>
                <value>
                    <fullName>MPP - Monash Talent</fullName>
                </value>
                <value>
                    <fullName>MPP - Program Delivery</fullName>
                </value>
                <value>
                    <fullName>Non-Partner Referrals</fullName>
                </value>
                <value>
                    <fullName>Parking and Transport</fullName>
                </value>
                <value>
                    <fullName>Partner Referrals</fullName>
                </value>
                <value>
                    <fullName>Research &amp; Learning</fullName>
                </value>
                <value>
                    <fullName>Resources</fullName>
                </value>
                <value>
                    <fullName>Scheduling Operations</fullName>
                </value>
                <value>
                    <fullName>School of Biomedical Sciences</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Employee_Assistance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Employee Assistance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ethical_conduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ethical conduct</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FAQRecordType__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FAQRecordType</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty_Business_Unit__c</fullName>
        <label>Faculty/Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Admissions</fullName>
                </value>
                <value>
                    <fullName>Buildings and Property Division (BPD)</fullName>
                </value>
                <value>
                    <fullName>CIO Portfolio</fullName>
                </value>
                <value>
                    <fullName>e-Solutions</fullName>
                </value>
                <value>
                    <fullName>Faculty of Art Design and Architecture</fullName>
                </value>
                <value>
                    <fullName>Faculty of Arts</fullName>
                </value>
                <value>
                    <fullName>Faculty of Business</fullName>
                </value>
                <value>
                    <fullName>Faculty of Education</fullName>
                </value>
                <value>
                    <fullName>Faculty of Engineering</fullName>
                </value>
                <value>
                    <fullName>Faculty of Information Technology</fullName>
                </value>
                <value>
                    <fullName>Faculty of Law</fullName>
                </value>
                <value>
                    <fullName>Faculty of Medicine, Nursing and Health Sciences</fullName>
                </value>
                <value>
                    <fullName>Faculty of Pharmacy</fullName>
                </value>
                <value>
                    <fullName>Faculty of Science</fullName>
                </value>
                <value>
                    <fullName>Graduations</fullName>
                </value>
                <value>
                    <fullName>Library</fullName>
                </value>
                <value>
                    <fullName>Monash_Connect_Communications</fullName>
                </value>
                <value>
                    <fullName>Monash College</fullName>
                </value>
                <value>
                    <fullName>Monash Connect</fullName>
                </value>
                <value>
                    <fullName>MRS</fullName>
                </value>
                <value>
                    <fullName>Online Assessment &amp; Integrity Services</fullName>
                </value>
                <value>
                    <fullName>Scholarships</fullName>
                </value>
                <value>
                    <fullName>SEBS</fullName>
                </value>
                <value>
                    <fullName>Student Service Innovation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Final_Approver__c</fullName>
        <label>Final Approver</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender_Equity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gender Equity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HR_Knowledge_users_only__c</fullName>
        <label>HR Knowledge users only</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>HR_Standard_Text_c__c</fullName>
        <label>Standard Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Internal_Use_Only__c</fullName>
        <description>Field to display information relevant to Australia Internal (e.g. system support people)</description>
        <inlineHelpText>Use this field to list procedures or describe tasks that must be performed to assist in resolving an enquiry.</inlineHelpText>
        <label>Internal Use Only</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Is_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leadership_Organisational_Development__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Leadership &amp; Organisational Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_FAQ_ID__c</fullName>
        <label>Legacy FAQ ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Keywords__c</fullName>
        <label>Keywords</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Last_modified_date__c</fullName>
        <description>Last modified date migrated from Rightnow</description>
        <label>Legacy Last modified date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legacy_Publish_Status__c</fullName>
        <description>Publish status&apos; migrated from RightNow are Publish, Draft and Review</description>
        <label>Legacy Publish Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monash_Adviser__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monash Adviser</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Monash_Connect__c</fullName>
        <description>Field to display information relevant to Australia Internal (e.g. system support people)</description>
        <label>Monash Connect</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Old_Article_Type__c</fullName>
        <label>Old Article Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Row_ID__c</fullName>
        <label>Original Row ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Our_Course__c</fullName>
        <label>Our Course</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Owning_Org_Unit__c</fullName>
        <label>Owning Org Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Academic Services</fullName>
                </value>
                <value>
                    <fullName>Access HR</fullName>
                </value>
                <value>
                    <fullName>Admissions Unit</fullName>
                </value>
                <value>
                    <fullName>Buildings and Property</fullName>
                </value>
                <value>
                    <fullName>CIO Portfolio</fullName>
                </value>
                <value>
                    <fullName>Employee Assistance</fullName>
                </value>
                <value>
                    <fullName>Employee Relations</fullName>
                </value>
                <value>
                    <fullName>Enrolment Compliance</fullName>
                </value>
                <value>
                    <fullName>Enrolment Services</fullName>
                </value>
                <value>
                    <fullName>Ethical Conduct</fullName>
                </value>
                <value>
                    <fullName>Gender Equity</fullName>
                </value>
                <value>
                    <fullName>Global Mobility</fullName>
                </value>
                <value>
                    <fullName>Graduations Unit</fullName>
                </value>
                <value>
                    <fullName>HR Services</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Leadership &amp; Organisational Development</fullName>
                </value>
                <value>
                    <fullName>Library</fullName>
                </value>
                <value>
                    <fullName>Monash College</fullName>
                </value>
                <value>
                    <fullName>Monash Connect</fullName>
                </value>
                <value>
                    <fullName>Monash Connect Communications</fullName>
                </value>
                <value>
                    <fullName>Monash International</fullName>
                </value>
                <value>
                    <fullName>Online Assessment and Integrity Services</fullName>
                </value>
                <value>
                    <fullName>Payroll Services</fullName>
                </value>
                <value>
                    <fullName>Policy and Consultancy</fullName>
                </value>
                <value>
                    <fullName>Recruitment</fullName>
                </value>
                <value>
                    <fullName>Remuneration</fullName>
                </value>
                <value>
                    <fullName>Scheduling Operations</fullName>
                </value>
                <value>
                    <fullName>Scholarships Unit</fullName>
                </value>
                <value>
                    <fullName>Student Finance</fullName>
                </value>
                <value>
                    <fullName>Student Service Innovation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payroll_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payroll Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PendingApprovalFormula__c</fullName>
        <formula>&quot;CommunicationCoordinator&quot;+&quot;,&quot; +
If(Superannuation__c= true, &quot;Super&quot;,&apos;&apos;)+&quot;,&quot; +  
If(Payroll_Services__c= true, &quot;Payroll&quot;,&apos;&apos;) +&quot;,&quot; + 
If( Recruitment__c =true, &quot;Recruitment&quot;,&apos;&apos;)+&quot;,&quot; + 
If( Access_HR__c =true, &quot;Access&quot;, &apos;&apos;)+&quot;,&quot; + 
If( Employee_Assistance__c  = true, &quot;Employee&quot;,&apos;&apos;) +&quot;,&quot; + 
If( Ethical_conduct__c =true, &quot;Ethical&quot;,&apos;&apos;) +&quot;,&quot; +  
If( Gender_Equity__c =true, &quot;Gender&quot;,&apos;&apos;) +&quot;,&quot; +   
If( Leadership_Organisational_Development__c =true, &quot;Leadership&quot;,&apos;&apos;) +&quot;,&quot; +   
If( Remuneration_Global_Mobility__c =true, &quot;Remuneration&quot;,&apos;&apos;) +&quot;,&quot; +   
If( Staff_Development__c = true,&quot;Staff&quot;, &apos;&apos;) +&quot;,&quot; +
If( Workforce_Policy_Procedure__c =true, &quot;Policy&quot;, &apos;&apos;) +&quot;,&quot; + 
If( Workplace_Relations__c =true, &quot;Relations&quot;,&apos;&apos;) +&quot;,&quot; +  
If( WorkforceAnalytics__c =True, &quot;Analytics&quot;, &apos;&apos;) +&quot;,&quot; +  
&quot;Knowledge&quot;</formula>
        <label>PendingApprovalFormula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PendingApproval_del__c</fullName>
        <label>PendingApproval</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pending Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Planned_Publication_Date__c</fullName>
        <label>Planned Publication Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Professional_Recognition__c</fullName>
        <label>Professional Recognition</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Proposed_Removal_Date__c</fullName>
        <label>Proposed Removal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposed_Removal_Status__c</fullName>
        <label>Proposed Removal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Archive</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Public_Access_URL__c</fullName>
        <formula>HYPERLINK(&quot;https://monashpartner.force.com/adviser/s/article/&quot;&amp;UrlName, &quot;https://monashpartner.force.com/adviser/s/article/&quot;&amp;UrlName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Public Access URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>FAQ Question</description>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruitment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recruitment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Links__c</fullName>
        <description>Field to save links related to the knowledge aarticles</description>
        <label>Related Links</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Remuneration_Global_Mobility__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Remuneration &amp; Global Mobility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <description>The date on which the article has been Un-Published for review and update.</description>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
</CustomObject>